--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
   <div class="container-fluid">
-    <a routerLink="/">Suzan</a>
+    <span class="nav-item">Suzan</span>
 
     <ul class="navbar-nav me-auto">
       <li class="nav-item" *ngIf="!(isAuthenticated | async)">
